# KDStateMachineEditor

src/app/: mainwindow.cpp  mainwindow.h
src/core/: CMakeLists.txt
src/core/tests/: CMakeLists.txt
src/view/: CMakeLists.txt  abstractcontroller.h  abstractview.cpp  abstractview.h  commandcontroller.h  configurationcontroller.h  editcontroller.cpp  editcontroller.h  kdsme.qrc  view.cpp  view.h
src/view/layout/: layerwiselayouter.cpp  layoutitem.cpp  layoutitem.h  layoutitemmodel.cpp
src/view/layout/graphvizlayout/: graphvizlayerlayouter.cpp  graphvizlayouterbackend.cpp
src/view/qml/: LayoutItemLoader.qml  StateMachineScene.qml  StateMachineView.qml
src/view/qml/uml/: UmlFinalState.qml  UmlStateMachine.qml
src/view/qml/util/: CreateTransitionHelper.qml  Line.qml
src/view/quick/: quickrecursiveinstantiator.cpp  quickrecursiveinstantiator.h
src/view/tests/: CMakeLists.txt
src/view/widgets/: statemachineview.cpp
